scouter log parser

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<form id="defaultForm">
 
 				<div class="page-header">
-				  <h1>iBatis Log parser <small>my breakable toys</small></h1>
+				  <h1>iBatis Log parser <small><a href='https://youngclown.github.io/scouterLogParsers/'>[scouter Log parser GO!!]</a></small></h1>
 				</div>
 
 				<div class="container-fluid">
