(String), (Integer) 내용 삭제

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 		<meta charset="utf-8">
 		<title>iBatis Log parser</title>
 		<script src="js/common/tipJS-MVC-dev.js"></script>
-
 		<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
 		<link href="css/common.css" rel="stylesheet" media="screen">
 		<style type="text/css">
@@ -13,11 +12,9 @@
 	<body>
 		<div class="container-fluid">
 			<form id="defaultForm">
-
 				<div class="page-header">
 				  <h1>iBatis Log parser <small><a href='https://youngclown.github.io/scouterLogParsers/'>[scouter Log parser GO!!]</a></small></h1>
 				</div>
-
 				<div class="container-fluid">
 					<div class="row-fluid">
 						<div class="span9">
@@ -30,7 +27,7 @@
 							 </div>
 							<span class="label">Original Log :</span>
 							<p>
-								<textarea id="txt_origin" class="span11" rows="8"></textarea>
+								<textarea id="txt_origin" class="span11" rows="8" style="overflow:scroll;"></textarea>
 							</p>
 							<div id="div_button_list" class="row-fluid">
 								<p>
@@ -47,7 +44,7 @@
 							<div class="row-fluid">
 								<span class="label">Parsed SQL:</span>
 								<p>
-									<textarea id="txt_parsing" class="span11" rows="8"></textarea>
+									<textarea id="txt_parsing" class="span11" rows="8" style="overflow:scroll;"></textarea>
 								</p>
 							</div>
 
